--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "next": "12.1.6",
+    "next-auth": "^4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "sass": "^1.52.3"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.13",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
