--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "firebase": "^9.8.3",
     "next": "12.1.6",
     "next-auth": "^4.5.0",
